# mcmcCheckConvergence

./: .Rbuildignore  .gitignore  AGENTS.md  DESCRIPTION  NAMESPACE  README.md  build.sh  cleanup
R/: convergence.R  extendr-wrappers.R
inst/doc/: convergence_guide.md
inst/tex/: inconsolata.sty
man/: checkConvergence.Rd  ess_tracer.Rd  makeControl.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  mcmcCheckConvergence-win.def
src/rust/: CLI.md  Cargo.toml  build.rs
src/rust/data/: expectedDiff_125.tsv  expectedDiff_625.tsv
src/rust/src/: core.rs  lib.rs
tests/: testthat.R
tests/test_1/: posterior_run_1.trees  posterior_run_2.trees
tests/testthat/: test-basic.R  test-plot-prep.R
tools/: bench_convergence.R  compare_tests.R  convergence_check.R  test-ess_tracer.R  test-ess_tracer.sh
