[package]
name = 'mcmcCheckConvergence'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib', 'rlib' ]
name = 'mcmcCheckConvergence'

[dependencies]
extendr-api = '0.8.1'
rayon = '1.10'
regex = '1.10'

[profile.release]
lto = true
codegen-units = 1
